[project]
name = "HuixiangDou"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.2",
    "bcembedding>=0.1.3",
    "beautifulsoup4>=4.14.2",
    "db-sqlite3>=0.0.1",
    "duckduckgo-search>=8.1.1",
    "einops>=0.8.1",
    "fastapi>=0.121.0",
    "gradio>=4.41",
    "jieba>=0.42.1",
    "loguru>=0.7.3",
    "lxml-html-clean>=0.4.3",
    "networkx>=3.0",
    "numpy<2.0.0",
    "openai>=1.0.0",
    "opencv-python-headless>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=1.10.13",
    "pymupdf>=1.26.6",
    "python-docx>=1.2.0",
    "pytoml>=0.1.21",
    "readability-lxml>=0.8.4.1",
    "redis>=7.0.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "sse-starlette>=3.0.3",
    "tenacity>=9.1.2",
    "termcolor>=3.2.0",
    "texttable>=1.7.0",
    "tiktoken>=0.12.0",
    "torch>=2.0.0",
    "transformers>=4.38",
    "transformers-stream-generator>=0.0.5",
    "unstructured>=0.18.18",
    "uvicorn>=0.38.0",
]
